<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tasty cafe</string>
    <!--    Меню-->
    <string name="food_0">куряче філе, бекон, сир пармезан, салат айсберг, помідори чері, сухарики, соус цезар</string>
    <string name="food_1">Головний інгредієнт грецького салату - це фета, саме цей сир найкраще доповнює смак свіжих овочів у поєднанні з оливковою олією. Склад: помідори, огірки свіжі, перець солодкий, маслини, цибуля червона, сир фета, олія, духмяні трави</string>
    <string name="food_2">Салат капрезе став одним з національних страв Італії завдяки своєму червоно–біло–зеленому кольору, що повторює кольори італійського прапора.  Складові:  Томати 1–2 шт сир Моцарела 1 кулька соус Песточіні листя зеленого базиліка</string>
    <string name="food_3">Салат капрезе став одним з національних страв Італії завдяки своєму червоно-біло-зеленому кольору, що повторює кольори італійського прапора.
        \nСкладові:
        \nТомати 1-2 шт
        \nсир Моцарела 1 кулька
        \nсоус Песточіні
        \nлистя зеленого базиліка</string>
    <string name="food_4">Свіжий помідор, огірок, перець болгарський</string>
    <string name="food_5">Камамбер, бринза, горгонзола, сулугуні, королівський, ягідний соус</string>
    <string name="food_6">Млинці з м’ясом, сиром та грибним соусом. 210 г.</string>
    <string name="food_8">Яйця, сіль, сало, зелень</string>
    <string name="food_9">Деруни - страва української, білоруської кухні. Куряче яйце, картопляні деруни, сметана</string>
    <string name="food_10">Вершковий соус, шпинат, фета, часникова олія,  запечена в яйці</string>
    <string name="food_11">Тісто, сир моцарелла, ананас, курка запечена, соус томатний або вершковий</string>
    <string name="food_12">Тісто, сир моцарела, помідори, соус томатний або вершковий</string>
    <string name="food_20">морозиво
фрукти (банани, ківі, персики, тощо);
ягоди (малина, полуниця, ожина, тощо);
збиті вершки;
вафлі, печиво або вафельний ріжок;
тертий шоколад, джем, згущене молоко, топінги;
горішки.</string>
    <string name="food_21">Вершки, Волоські горіхи, яйця, цукор</string>
    <string name="food_22">Круасан, заварний крем, цукрова пудра</string>
    <string name="food_23">Банани, ківі, апельсини, яблуко, груші, сливи, фруктовий йогурт, грецькі горіхи, курага, родзинки</string>

    <!--    Голвна активність-->
    <string name="recommendation">Рекомендуємо</string>
    <string name="menu">Меню</string>
    <string name="salad">Салати та закуски</string>
    <string name="dish">Основні страви</string>
    <string name="drinks">Напої</string>
    <string name="desert">Десерти</string>
    <string name="about">Про нас</string>
    <string name="currency">\ грн</string>
    <string name="about_text1">Tasty cafe – комфортний заклад громадського харчування, з доступними цінами та смачними стравами. Наші працівники зроблять все, щоб вас час проводження у нашому закладі був найкращим. І в нас є смачна кава)
        \n\nГрафік роботи: пн–пт 8:00 – 19:00; сб–нд 8:00 – 22:00\nВул. Шевченка 28 а; +380 96 656 5454
        \n\nРозробив Sviat Kuzbyt, демонстраційний додаток. Травень - червень 2022</string>
    <string name="none"> </string>

    <!--    Інше-->
    <string name="get_order">Замовити</string>
    <string name="undo">Назад</string>
    <string name="order_btn">Замовлення</string>
    <string name="search">Пошук</string>
    <string name="go_orders"><u>Переглянути замовлення</u></string>
    <string name="delete_order_btn">Видалити замовлення</string>
    <string name="image">Зображення</string>
    <string name="delete">Видалити</string>
    <string name="sum">Сума:\ </string>
    <string name="delete_orders">Видалити всі замовлення</string>
    <string name="deleteOrdersWarming">Видалити всі замовлення?</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="create_order">Створити замовлення</string>
    <string name="titleQR">Створення замовлення</string>
    <string name="textQR">Підійдіть на касу і покажіть працівнику QR-код нижче:</string>
</resources>