<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QRcodeActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageQR"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/titleQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/titleQR"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/textQR"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleQR"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/textQR"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />



    <TextView
        android:id="@+id/closeQr"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/undo"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"/>

</RelativeLayout>