<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cardviewOrder"
        app:cardCornerRadius="45dp"
        app:cardElevation="0dp"
        android:layout_marginVertical="15dp"
        android:layout_marginStart="20dp"
        >

        <ImageView
            android:id="@+id/imageOrder"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/titleOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:layout_toEndOf="@+id/cardviewOrder"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/priceOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleOrder"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:layout_toEndOf="@+id/cardviewOrder"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/priceOrder2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleOrder"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/priceOrder"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/currency"
        android:textColor="@color/blue" />

    <TextView
        android:id="@+id/weightOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleOrder"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/priceOrder2"
        android:fontFamily="@font/montserrat_regular" />

    <View
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_below="@id/cardviewOrder"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/backround_btns_order" />

    <ImageButton
        android:id="@+id/btn_add_remove"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/cardviewOrder"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="10dp"
        android:background="#00000000"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/delete_num"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text_num"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_below="@id/cardviewOrder"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/btn_add_remove"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/btn_add_num"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@id/cardviewOrder"
        android:layout_toEndOf="@+id/text_num"
        android:background="#00000000"
        android:padding="10dp"
        android:src="@drawable/add_num"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/deleteOrder"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/cardviewOrder"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="@color/blue"
        android:textSize="16sp" />
</RelativeLayout>